Changelog for modExtra.

2.0.0-pl
==============
- [#6] Renaming script works in any environment.
- Removed shell renaming script.

1.0.1-beta
==============
- PSR-2
- Requires at least MODX 2.3
- Disabling "office" resolver will clear its files from built package.
- Fixed some typos.

1.0.0-beta
==============
- Optimized for MODX 2.3
- Improved processors
- Disabled plugin and system settings
- Improved UI
- Added grid actions
- Added icons in menu
- Added search in grid
- Grid sorting
- Enable and disable actions